# stranger_audio_lab

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  audio_engine.cpp  example_random_note.py  example_simple_multi_part_song.py  main.py  note_generator_bar_based.py  random_note_example.py  stranger_ensemble.py  stranger_midi_recorder.py  stranger_note_generator.py  stranger_note_generator_bar_based.py  stranger_part.py  stranger_playback.py  stranger_song.py
